Fix clipping and remove transitions from default stylesheet
Also remove unused code from textbox to fix warnings

--- a/core/src/default_theme.css
+++ b/core/src/default_theme.css
@@ -28,6 +28,7 @@ button:over {
 }
 
 button:active {
+    outer-shadow: 0 1 1 transparent;
     overflow: hidden;
 }
 
@@ -67,28 +68,21 @@ checkbox {
     color: #ffffff00;
     background-color: #ffffff00;
     child-space: 1s;
-    transition: background-color 0.1 0.0;
-    transition: color 0.1 0.0;
-    transition: color 0.1 0.0;
 }
 
 checkbox:hover {
     background-color: #e5e5e5;
-    transition: background-color 0.05 0.0;
 }
 
 checkbox:active {
     border-color: #b6b6b6;
     background-color: #dcdcdc;
-    transition: background-color 0.1 0.0;
 }
 
 checkbox:checked {
     background-color: #005a9e;
     border-color: #005a9e;
     color: #f5f5f5;
-    transition: background-color 0.1 0.0;
-    transition: color 0.1 0.0;
 }
 
 label.icon {
@@ -209,7 +203,6 @@ radiobutton {
 radiobutton:checked {
     border-color: #005a9e;
     background-color: #005a9e;
-    transition: background-color 0.1 0.0;
 }
 
 radiobutton .inner {
@@ -224,8 +217,6 @@ radiobutton:checked .inner {
     display: flex;
     width: 12px;
     height: 12px;
-    transition: width 0.1 0.0;
-    transition: height 0.1 0.0;
 }
 
 dropdown .title {
@@ -292,22 +283,16 @@ slider .thumb>.inner {
     height: 14px;
     border-radius: 50%;
     background-color: #005a9e;
-    transition: width 0.1 0.0;
-    transition: height 0.1 0.0;
 }
 
 slider .thumb:hover>.inner {
     width: 18px;
     height: 18px;
-    transition: width 0.1 0.0;
-    transition: height 0.1 0.0;
 }
 
 slider:active .thumb>.inner {
     width: 10px;
     height: 10px;
-    transition: width 0.1 0.0;
-    transition: height 0.1 0.0;
 }
 
 scrollbar {
@@ -368,8 +353,8 @@ popup {
 popup:checked {
     display: flex;
     opacity: 1.0;
-    transition: opacity 0.1 0.0;
 }
+
 menucontroller {
     width: 0px;
     height: 0px;
